// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddTask component should render default component 1`] = `
<div
  className="add-task-component"
>
  <FontAwesomeIcon
    className="icon"
    icon={
      Object {
        "icon": Array [
          448,
          512,
          Array [],
          "f067",
          "M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z",
        ],
        "iconName": "plus",
        "prefix": "fas",
      }
    }
  />
  <span
    className="add-task-text"
    onClick={[Function]}
  >
    addTask.new
  </span>
</div>
`;

exports[`AddTask component should switch state to active 1`] = `
<div
  className="add-task-component"
>
  <FontAwesomeIcon
    className="icon"
    icon={
      Object {
        "icon": Array [
          448,
          512,
          Array [],
          "f067",
          "M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z",
        ],
        "iconName": "plus",
        "prefix": "fas",
      }
    }
  />
  <span
    className="add-task-text"
    onClick={[Function]}
  >
    addTask.new
  </span>
</div>
`;

exports[`AddTask component should switch state to active 2`] = `
<div
  className="add-task-component"
>
  <FontAwesomeIcon
    className="icon"
    icon={
      Object {
        "icon": Array [
          448,
          512,
          Array [],
          "f067",
          "M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z",
        ],
        "iconName": "plus",
        "prefix": "fas",
      }
    }
  />
  <input
    autoFocus={true}
    className="add-task-input"
    onBlur={[Function]}
    onKeyDown={[Function]}
  />
</div>
`;
